--- a/whl_packages/index.html
+++ b/whl_packages/index.html
@@ -14,3 +14,7 @@
 <a href="https://pycg.s3.ap-northeast-1.amazonaws.com/packages/open3d_pycg_cpu-0.18.0%2Bb2831fe2d-cp311-cp311-manylinux_2_27_x86_64.whl">open3d_pycg_cpu-0.18.0+b2831fe2d-cp311-cp311-manylinux_2_27_x86_64.whl</a><br>
 <a href="https://pycg.s3.ap-northeast-1.amazonaws.com/packages/open3d_pycg_cpu-0.18.0%2Bb2831fe2d-cp38-cp38-manylinux_2_27_x86_64.whl">open3d_pycg_cpu-0.18.0+b2831fe2d-cp38-cp38-manylinux_2_27_x86_64.whl</a><br>
 <a href="https://pycg.s3.ap-northeast-1.amazonaws.com/packages/open3d_pycg_cpu-0.18.0%2Bb2831fe2d-cp39-cp39-manylinux_2_27_x86_64.whl">open3d_pycg_cpu-0.18.0+b2831fe2d-cp39-cp39-manylinux_2_27_x86_64.whl</a><br>
+<a href="https://pycg.s3.ap-northeast-1.amazonaws.com/packages/open3d_pycg_cpu-0.19.0-cp310-cp310-manylinux_2_31_x86_64.whl">open3d_pycg_cpu-0.19.0-cp310-cp310-manylinux_2_31_x86_64.whl</a><br>
+<a href="https://pycg.s3.ap-northeast-1.amazonaws.com/packages/open3d_pycg_cpu-0.19.0-cp311-cp311-manylinux_2_31_x86_64.whl">open3d_pycg_cpu-0.19.0-cp311-cp311-manylinux_2_31_x86_64.whl</a><br>
+<a href="https://pycg.s3.ap-northeast-1.amazonaws.com/packages/open3d_pycg_cpu-0.19.0-cp312-cp312-manylinux_2_31_x86_64.whl">open3d_pycg_cpu-0.19.0-cp312-cp312-manylinux_2_31_x86_64.whl</a><br>
+<a href="https://pycg.s3.ap-northeast-1.amazonaws.com/packages/open3d_pycg_cpu-0.19.0-cp39-cp39-manylinux_2_31_x86_64.whl">open3d_pycg_cpu-0.19.0-cp39-cp39-manylinux_2_31_x86_64.whl</a><br>
